samples/_failures_safe/1761149785_9cdfc6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_29a0d9b8.c: In function ‘main’:
./samples/SAFE/__tmp_29a0d9b8.c:143:12: error: missing terminating " character
  143 |     printf("Original vector: (%f, %
      |            ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_29a0d9b8.c:143:5: error: expected expression at end of input
  143 |     printf("Original vector: (%f, %
      |     ^~~~~~
./samples/SAFE/__tmp_29a0d9b8.c:143:5: error: expected declaration or statement at end of input
